[package]
name = "atlassian-app-auth"
version = "1.0.1-alpha.0"
authors = ["Nicholas Bishop <nicholasbishop@gmail.com>"]
edition = "2018"
description = "Library for authenticating as an Atlassian Connect App"
keywords = ["atlassian", "jira", "jwt"]
categories = ["authentication", "web-programming"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nicholasbishop/atlassian-app-auth"

[dependencies]
jsonwebtoken = { version = "7.2.0", default_features = false }
percent-encoding = { version = "2.1.0", default_features = false }
serde = { version = "1.0.130", default_features = false, features = ["derive"] }
sha2 = { version = "0.9.6", default_features = false }
thiserror = { version = "1.0.29", default_features = false }
url = { version = "2.2.2", default_features = false }

[dev-dependencies]
argh = { version = "0.1.6", default_features = false }
reqwest = { version = "0.11.4", default_features = false, features = ["blocking", "json", "rustls-tls"] }
serde_json = { version = "1.0.67", default_features = false }
